Bug 107889 - DOCX import: multi-page floating table with section break is not multi-page
Summary: DOCX import: multi-page floating table with section break is not multi-page
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-16 10:30 UTC by Miklos Vajna
Modified: 2017-05-17 08:20 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Reproducer document. (10.94 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2017-05-16 10:30 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2017-05-16 10:30:41 UTC
Created attachment 133356 [details]
Reproducer document.

This is the docx version of bug 107773.

This concrete situation is one where the intention is clearly a multi-page table, not a floating one. When there is a section break: next page after such a table, that effectively disables any kind of wrapping, so in that case importing the table as a multi-page one is the correct thing to do (till the feature from bug 61594 is not implemented).
Comment 1 Commit Notification 2017-05-16 17:02:14 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=659c0227a50d298780d72902314e03df8824bc06

tdf#107889 DOCX import: consider page breaks for multi-page floattables

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.