tdf#107889 DOCX import: consider page breaks for multi-page floattables

This is the DOCX equivalent of commit
6aba29576df7a2a40e54040d4dd09d94d6594741 (tdf#107773 DOC import:
consider page breaks for multi-page floattables, 2017-05-11): a specific
case where it's clearly superior to import a multi-page floating table
as a multi-page one, rather than a floating one.

Reviewed-on: https://gerrit.libreoffice.org/37683
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Jenkins <ci@libreoffice.org>
(cherry picked from commit 659c0227a50d298780d72902314e03df8824bc06)

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport9.cxx
	writerfilter/source/dmapper/PropertyMap.cxx
	writerfilter/source/dmapper/PropertyMap.hxx

Change-Id: I71a92d2b10e52e505665831caacad2948d22b4e1